[ansible] JFrog Platform 10.9.2 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
@@ -23,7 +23,7 @@ galaxy_info:
         - stretch
         - buster
     - name: Amazon
-      version:
+      versions:
         - 2
   galaxy_tags:
     - artifactory
