[ansible] JFrog Platform 10.10.0 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/meta/main.yml
@@ -15,15 +15,13 @@ galaxy_info:
         - 8
     - name: Ubuntu
       versions:
-        - xenial
         - bionic
         - focal
     - name: Debian
       versions:
-        - stretch
         - buster
     - name: Amazon
-      versions:
+      version:
         - 2
   galaxy_tags:
     - artifactory
