Ansible/Artifactory - Upgrade play to stop service
When running the upgrade play the stop artifactory is never notified.
So running flush_handlers never actually gets hit.

Add notify to unarchive task, with the idea being if you're
unarchiving a new version this means that host will be taking
an update.

zachary.wayer@garmin.com

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
@@ -27,6 +27,7 @@
     owner: "{{ artifactory_user }}"
     group: "{{ artifactory_group }}"
     creates: "{{ artifactory_untar_home }}"
+    notify: stop artifactory
   when: (download_artifactory is succeeded) and (not ansible_check_mode)
 
 - name: Stop artifactory
